refactoring y funcion retener saldo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <button class="links" onclick="transferirDinero()">Transferir dinero</button>
         <button class="links" onclick="cambiarLimiteDeExtraccion()">Cambiar límite de extracción</button>
         <button class="links" onclick="cerrarSesion()">Cerrar sesión</button>
+        <button class="links" onclick="iniciarSesion()">Iniciar sesión</button>
+
       </div>
       <div class="green-container">
         <div class="cuenta-info">
