--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <body>
     <div class="header">
       <img class="logo" src="img/logo.png"/>
-      <div class="align-left">
-        <span id="nombre">Bienvenido/a</span>
+      <div id="bienvenido" class="align-left">
+        <span id="nombre" class="oculto">Bienvenido/a</span>
+        <img class="avatar" src="img/avatar.svg"/>
+      </div>
+      <div id="login" class="align-left oculto">
+        <span id="nombre"><a onclick="iniciarSesion()" href="#">Iniciar Sesion</a></span>
         <img class="avatar" src="img/avatar.svg"/>
       </div>
     </div>
-    <div class="white-container">
+    <div id="menuYDemas" class="white-container">
       <div class="menu-container">
         <h1 class="tu-cuenta">Tu cuenta</h1>
         <button class="links" onclick="extraerDinero()">Extraer dinero</button>
@@ -23,10 +27,10 @@
         <button class="links" onclick="pagarServicio()">Pagar servicios</button>
         <button class="links" onclick="transferirDinero()">Transferir dinero</button>
         <button class="links" onclick="cambiarLimiteDeExtraccion()">Cambiar límite de extracción</button>
-        <button class="links" onclick="cerrarSesion()">Cerrar sesión</button>
-        <button class="links" onclick="iniciarSesion()">Iniciar sesión</button>
-
+        <button class="links" id="logout" onclick="cerrarSesion()">Cerrar sesión</button>
+        <button class="links" id="login" onclick="iniciarSesion()">Iniciar sesión</button>
       </div>
+
       <div class="green-container">
         <div class="cuenta-info">
           <p>Saldo en tu cuenta</p>
@@ -34,6 +38,9 @@
           <p id="limite-extraccion">Tu límite de extracción es: </p>
         </div>
       </div>
+    </div>
+    <div id="publicidad" class="white-container-publicidad oculto">
+      <p>para publicitar comuniquese con elcharly</p>
     </div>
   </body>
   <script type="text/javascript" src="js/homebanking.js"></script>
